--- a/package.json
+++ b/package.json
@@ -1,42 +1,29 @@
 {
-  "name": "api",
+  "name": "com.tms.rest",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node app.js",
-    "test": "mocha tests/**/*Tests.js",
-    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
-    "build": "tsc",
-    "prestart": "npm run build"
-
-  },
-  "author": "",
-  "license": "ISC",
+  "description": "Backend Rest Service For TMS Application",
+  "main": "server.js",
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.16.4",
-    "mongoose": "^5.3.10",
-    "nodemon": "^1.18.5"
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1"
   },
   "devDependencies": {
-    "eslint": "^5.8.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "mocha": "^5.2.0",
-    "should": "^13.2.3",
-    "sinon": "^7.2.2",
-    "supertest": "^3.3.0"
+    "@types/express": "^4.17.0",
+    "@types/node": "^12.6.9",
+    "typescript": "^3.5.3"
   },
-  "nodemonConfig": {
-    "restartable": "rs",
-    "ignore": [
-      "node_modules/**/node_modules"
-    ],
-    "delay": "2500",
-    "env": {
-      "NODE_ENV": "development",
-      "PORT": 4000
-    }
-  }
+  "scripts": {
+    "start": "tsc && node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rakeshgirase/tmsserver.git"
+  },
+  "author": "Rakesh Girase",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/rakeshgirase/tmsserver/issues"
+  },
+  "homepage": "https://github.com/rakeshgirase/tmsserver#readme"
 }
