--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "main": "server.js",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cassandra-driver": "^4.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@types/cassandra-driver": "^4.0.3",
+    "@types/cors": "^2.8.5",
     "@types/express": "^4.17.0",
     "@types/node": "^12.6.9",
     "typescript": "^3.5.3"
